cfn_benchmark/cfn_templates/iksena__llm-iac-data-analysis/cfn_benchmark__cfn_templates__Tianyi2__IRIS__data__cloudformation_collected_templates_new__template_11988_VPC+NAT gateway.yaml
AWSTemplateFormatVersion: '2010-09-09'

Parameters:
  VpcCIDR: # CIDR block for the VPC
    Type: String
    Default: 10.0.0.0/24
  publicsubnet1CIDR: # CIDR block for public subnet 1
    Type: String
    Default: 10.0.0.0/25
  publicsubnet2CIDR: # CIDR block for public subnet 2
    Type: String
    Default: 10.0.0.130/26
  privatesubnet1CIDR: # CIDR block for private subnet 1
    Type: String
    Default: 10.0.0.192/27
  privatesubnet2CIDR: # CIDR block for private subnet 2
    Type: String
    Default: 10.0.0.224/28

Mappings:
  RegionMap: # Mapping for Availability Zones based on region
    us-east-1:
      AZs:
        - us-east-1a
        - us-east-1b
        - us-east-1c
    us-east-2:
      AZs:
        - us-east-2a
        - us-east-2b
        - us-east-2c

Resources:
  VPC: # Creates a new VPC
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: !Ref VpcCIDR
      EnableDnsSupport: true
      EnableDnsHostnames: true

  InternetGateway: # Creates an Internet Gateway
    Type: AWS::EC2::InternetGateway

  InternetGatewayAttachment: # Attaches the Internet Gateway to the VPC
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      InternetGatewayId: !Ref InternetGateway
      VpcId: !Ref VPC

  PublicSubnet1: # Creates Public Subnet 1
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: us-east-1a
      CidrBlock: !Ref publicsubnet1CIDR
      MapPublicIpOnLaunch: true

  PublicSubnet2: # Creates Public Subnet 2
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: us-east-1b
      CidrBlock: !Ref publicsubnet2CIDR
      MapPublicIpOnLaunch: true

  PrivateSubnet1: # Creates Private Subnet 1
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: us-east-1a
      CidrBlock: !Ref privatesubnet1CIDR

  PrivateSubnet2: # Creates Private Subnet 2
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: us-east-1b
      CidrBlock: !Ref privatesubnet2CIDR

  PublicRouteTable: # Creates a Route Table for public subnets
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC

  DefaultPublicRoute: # Creates a default route to the Internet Gateway for the public route table
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway

  PublicSubnet1RouteTableAssociation: # Associates Public Subnet 1 with the public route table
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PublicRouteTable
      SubnetId: !Ref PublicSubnet1

  PublicSubnet2RouteTableAssociation: # Associates Public Subnet 2 with the public route table
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PublicRouteTable
      SubnetId: !Ref PublicSubnet2

  PrivateRouteTable: # Creates a Route Table for private subnets
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC

  PrivateSubnet1RouteTableAssociation: # Associates Private Subnet 1 with the private route table
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PrivateRouteTable
      SubnetId: !Ref PrivateSubnet1

  PrivateSubnet2RouteTableAssociation: # Associates Private Subnet 2 with the private route table
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PrivateRouteTable
      SubnetId: !Ref PrivateSubnet2

  NatEIP:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc

  NATGateway:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId: !GetAtt NatEIP.AllocationId
      SubnetId: !Ref PublicSubnet1
      Tags:
        - Key: Name
          Value: NAT Gateway

  PrivateDefaultRoute:
    Type: AWS::EC2::Route
    DependsOn: NATGateway
    Properties:
      RouteTableId: !Ref PrivateRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NATGateway
